Updated index page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,247 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <title>Youtube</title>
+  <title>Youtube - Página Inicial</title>
 </head>
+
 <body>
-  
+  <header>
+    <nav class="nav-bar">
+      <div class="left-menu">
+        <button class="btn-menu"><img src="assets/images/menu.svg" alt="Icone de menu"></button>
+        <a href="#"><img src="assets/images/youtube 1.png" alt="Logo da marca"></a>
+      </div>
+
+      <div class="center-menu">
+        <input type="text" placeholder="Pesquisar">
+        <button><img src="assets/images/search.svg" alt="Icone de lupa do botão pesquisar"></button>
+      </div>
+
+      <div class="right-menu">
+        <img src="assets/images/video.svg" alt="Icone de vídeo">
+        <img src="assets/images/bell.svg" alt="Icone de notificações">
+        <img src="assets/images/channels4_profile.jpg" alt="Imagem do perfil do usuário">
+      </div>
+    </nav>
+  </header>
+
+  <aside>
+    <ul>
+      <li><a href="#"><img src="assets/images/home.svg" alt="Botão Início">Início</a></li>
+      <li><a href="#"><img src="assets/images/compass.svg" alt="Botão Explorar">Explorar</a></li>
+      <li><a href="#"><img src="assets/images/youtube.svg" alt="Botão Inscrições">Inscrições</a></li>
+      <li><a href="#"><img src="assets/images/disc.svg" alt="Botão YouTube Music">YouTube Music</a></li>
+      <li><a href="#"><img src="assets/images/thumbs-up.svg" alt="Botão Vídeos que gostei">Vídeos que gostei</a></li>
+      <li><a href="#"><img src="assets/images/clock.svg" alt="Botão Assistir mais tarde">Assistir mais tarde</a></li>
+      <li><a href="#"><img src="assets/images/download.svg" alt="Botão Downloads">Downloads</a></li>
+      <li><a href="#"><img src="assets/images/film.svg" alt="Botão Filmes">Filmes</a></li>
+      <li><a href="#"><img src="assets/images/book.svg" alt="Botão Aprender">Aprender</a></li>
+      <li><a href="#"><img src="assets/images/award.svg" alt="Botão Esportes">Esportes</a></li>
+    </ul>
+  </aside>
+
+  <main>
+    <section class="video-wrapper">
+      <div class="video-card">
+        <a href="https://youtu.be/PkEpHoXUkeM" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Geração Tech Unimed - BH - Ciência de Dados
+              <span>2,1 mil visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Scrum Talks
+              <span>1,6 mil visualizações
+                Transmitido há 3 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Machine Learning Avançado - Fast Track
+              <span>1,7 mil visualizações
+                Transmitido há 4 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/gTYMAoX_27c" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-10.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Global Skills #2 - Project Planning
+              <span>2,1 mil visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/LWyxFrwSGoM" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-2.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Como aprender a programar Python do ZERO
+              <span>711 visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/PkEpHoXUkeM" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Geração Tech Unimed - BH - Ciência de Dados
+              <span>2,1 mil visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Scrum Talks
+              <span>1,6 mil visualizações
+                Transmitido há 3 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Machine Learning Avançado - Fast Track
+              <span>1,7 mil visualizações
+                Transmitido há 4 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Scrum Talks
+              <span>1,6 mil visualizações
+                Transmitido há 3 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Machine Learning Avançado - Fast Track
+              <span>1,7 mil visualizações
+                Transmitido há 4 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/gTYMAoX_27c" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-10.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Global Skills #2 - Project Planning
+              <span>2,1 mil visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="video-card">
+        <a href="https://youtu.be/LWyxFrwSGoM" target="_blank">
+          <div class="thumbnail">
+            <img src="assets/images/image 16-2.png" alt="Vídeo thumbnail">
+          </div>
+          <div class="video-details">
+            <img src="assets/images/Channel Avatar.png" alt="Logo do canal">
+            <p>
+              Como aprender a programar Python do ZERO
+              <span>711 visualizações
+                Transmitido há 2 dias</span>
+            </p>
+          </div>
+        </a>
+      </div>
+
+    </section>
+  </main>
+
 </body>
+
 </html>
