Adicionado folha de estilos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header>
-    <nav class="nav-bar">
+  <header class="navbar">
+    <nav class="menu-wrapper">
       <div class="left-menu">
         <button class="btn-menu"><img src="assets/images/menu.svg" alt="Icone de menu"></button>
         <a href="#"><img src="assets/images/youtube 1.png" alt="Logo da marca"></a>
@@ -23,14 +23,17 @@
       </div>
 
       <div class="right-menu">
-        <img src="assets/images/video.svg" alt="Icone de vídeo">
-        <img src="assets/images/bell.svg" alt="Icone de notificações">
-        <img src="assets/images/channels4_profile.jpg" alt="Imagem do perfil do usuário">
+        <ul>
+          <li><a href="#"><img src="assets/images/video.svg" alt="Icone de vídeo"></a></li>
+          <li><a href="#"><img src="assets/images/bell.svg" alt="Icone de notificações"></a></li>
+          <li><a href="#"><img src="assets/images/channels4_profile.jpg" alt="Imagem do perfil do usuário"
+                class="profile-img"></a></li>
+        </ul>
       </div>
     </nav>
   </header>
 
-  <aside>
+  <aside class="sidebar">
     <ul>
       <li><a href="#"><img src="assets/images/home.svg" alt="Botão Início">Início</a></li>
       <li><a href="#"><img src="assets/images/compass.svg" alt="Botão Explorar">Explorar</a></li>
@@ -45,7 +48,7 @@
     </ul>
   </aside>
 
-  <main>
+  <main class="main">
     <section class="video-wrapper">
       <div class="video-card">
         <a href="https://youtu.be/PkEpHoXUkeM" target="_blank">
