--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="menu-wrapper">
       <div class="left-menu">
         <button class="btn-menu"><img src="assets/images/menu.svg" alt="Icone de menu"></button>
-        <a href="#"><img src="assets/images/youtube 1.png" alt="Logo da marca"></a>
+        <a href="index.html"><img src="assets/images/youtube 1.png" alt="Logo da marca"></a>
       </div>
 
       <div class="center-menu">
