Adicionado página de vídeos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main class="main">
     <section class="video-wrapper" id="video-wrapper">
       <div class="video-card">
-        <a href="https://youtu.be/PkEpHoXUkeM" target="_blank">
+        <a href="video-1.html">
           <div class="thumbnail">
             <img src="assets/images/image 16.png" alt="Vídeo thumbnail">
           </div>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+        <a href="video-2.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
           </div>
@@ -84,7 +84,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+        <a href="video-3.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
           </div>
@@ -100,8 +100,8 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/gTYMAoX_27c" target="_blank">
-          <div class="thumbnail">
+        <a href="video-4.html">
+          <div class=" thumbnail">
             <img src="assets/images/image 16-10.png" alt="Vídeo thumbnail">
           </div>
           <div class="video-details">
@@ -116,7 +116,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/LWyxFrwSGoM" target="_blank">
+        <a href="video-5.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-2.png" alt="Vídeo thumbnail">
           </div>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/PkEpHoXUkeM" target="_blank">
+        <a href="video-1.html">
           <div class="thumbnail">
             <img src="assets/images/image 16.png" alt="Vídeo thumbnail">
           </div>
@@ -148,7 +148,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+        <a href="video-2.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
           </div>
@@ -164,7 +164,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+        <a href="video-3.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
           </div>
@@ -180,7 +180,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/0kpfMxtX7M4" target="_blank">
+        <a href="video-2.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-4.png" alt="Vídeo thumbnail">
           </div>
@@ -196,7 +196,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/Ru9AyUPSNPk" target="_blank">
+        <a href="video-3.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-7.png" alt="Vídeo thumbnail">
           </div>
@@ -212,8 +212,8 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/gTYMAoX_27c" target="_blank">
-          <div class="thumbnail">
+        <a href="video-4.html">
+          <div class=" thumbnail">
             <img src="assets/images/image 16-10.png" alt="Vídeo thumbnail">
           </div>
           <div class="video-details">
@@ -228,7 +228,7 @@
       </div>
 
       <div class="video-card">
-        <a href="https://youtu.be/LWyxFrwSGoM" target="_blank">
+        <a href="video-5.html">
           <div class="thumbnail">
             <img src="assets/images/image 16-2.png" alt="Vídeo thumbnail">
           </div>
